Opened 8 years ago

Closed 8 years ago

#13042 closed bug (fixed)

Not all cookies saved when closing WebPositive

Reported by: markh Owned by: pulkomandy
Priority: normal Milestone: Unscheduled
Component: Applications/WebPositive Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

When you close WebPositive, it saves all cookies to a file, but sometimes some cookies are missing. This can also be seen in the "Cookie manager" as that is missing the same cookies. To reproduce, go to tweakers.net. It should show a remark that you should accept the cookies. When you click "Ga verder", it should store a cookie indicating that you have accepted it, but when you close WebPositive and open it again, it shows the remark again.

Attachments (1)

0001-Fix-13042-Make-sure-all-cookies-are-saved.patch (1.4 KB ) - added by markh 8 years ago.

Download all attachments as: .zip

Change History (3)

comment:1 by markh, 8 years ago

patch: 01

comment:2 by pulkomandy, 8 years ago

Resolution: fixed
Status: newclosed

Patch applied in hrev50634, along with more fixes to cookie date parsing.

Thanks for investigating and fixing this! It will make web browsing on Haiku a little less annoying :)

Note: See TracTickets for help on using tickets.