Fix #13042: Make sure all cookies are saved